--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
         android:layout_width="401dp"
         android:layout_height="172dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/sol_rural"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +33,6 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="16dp"
-                android:src="@drawable/agrovoltaico"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -57,7 +55,6 @@
                 android:layout_width="46dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/seta_direita"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +82,6 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="16dp"
-                android:src="@drawable/fazendas_cadastradas"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -108,7 +104,6 @@
                 android:layout_width="46dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/seta_direita"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -136,7 +131,6 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="16dp"
-                android:src="@drawable/cadastro"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -159,7 +153,6 @@
                 android:layout_width="46dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/seta_direita"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -168,7 +161,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/buttonCadastreSe"
+        android:id="@+id/btn_login"
         android:layout_width="231dp"
         android:layout_height="54dp"
         android:layout_marginStart="16dp"
