Criando layout e navegação da página "sobre o projeto"

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="verde_agua">#20B2AA</color>
     <color name="verde">#6cac7c</color>
+    <color name="verde_pastel">#a8ccc4</color>
 </resources>
