--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -44,7 +44,7 @@
 
     <!-- Formulário -->
     <EditText
-        android:id="@+id/farmName"
+        android:id="@+id/nome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -67,7 +67,7 @@
         android:inputType="textEmailAddress"
         android:padding="12dp"
         android:background="@drawable/rounded_edittext_background"
-        app:layout_constraintTop_toBottomOf="@id/farmName"
+        app:layout_constraintTop_toBottomOf="@id/nome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
