--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,23 +25,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/pageTitle"
         android:layout_width="238dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Inscreva-se"
+        android:text="Bem vindo!"
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/topBar"
         app:layout_constraintEnd_toEndOf="@id/topBar"
-        app:layout_constraintHorizontal_bias="0.744"
+        app:layout_constraintHorizontal_bias="0.815"
         app:layout_constraintStart_toStartOf="@id/topBar"
         app:layout_constraintTop_toTopOf="@id/topBar"
         app:layout_constraintVertical_bias="0.516" />
-
 
     <EditText
         android:id="@+id/email"
