--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="verde_agua">#20B2AA</color>
     <color name="verde">#6cac7c</color>
-    <color name="verde_pastel">#a8ccc4</color>
+    <color name="verde_pastel">#aed5b5</color>
 </resources>
