--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Top Bar -->
     <View
         android:id="@+id/topBar"
         android:layout_width="0dp"
@@ -26,8 +25,6 @@
         android:contentDescription="Botão de Voltar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Mensagem de Agradecimento -->
 
     <TextView
         android:id="@+id/pageTitle"
@@ -55,7 +52,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Mensagem de Preenchimento do Formulário -->
     <TextView
         android:id="@+id/mensagemFormularioTextView"
         android:layout_width="0dp"
@@ -69,7 +65,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Formulário de Entrada -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -82,13 +77,12 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- Campo para Itens Cultivados -->
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/itensCultivadosTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Itens Cultivados:"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/itensCultivadosEditText"
@@ -97,14 +91,13 @@
                 android:hint="Ex: Milho, Feijão"
                 android:inputType="text" />
 
-            <!-- Campo para Tamanho da Propriedade -->
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/tamanhoDaPropriedadeTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tamanho da Propriedade (em hectares):"
+                android:layout_marginTop="16dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp" />
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/tamanhoDaPropriedadeEditText"
@@ -113,14 +106,13 @@
                 android:hint="Ex: 10"
                 android:inputType="numberDecimal" />
 
-            <!-- Campo para Quantidade de Safras por Ano -->
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/quantidadeDeSafrasPorAnoTextView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Safras por Ano:"
+                android:layout_marginTop="16dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp" />
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/quantidadeDeSafrasPorAnoEditText"
@@ -129,7 +121,6 @@
                 android:hint="Ex: 2"
                 android:inputType="number" />
 
-            <!-- Botão para Salvar as Informações -->
             <Button
                 android:id="@+id/salvarButton"
                 android:layout_width="match_parent"
@@ -140,7 +131,6 @@
                 android:backgroundTint="@color/verde_pastel"
                 android:textColor="@color/white" />
 
-            <!-- LinearLayout para os Botões de Editar e Excluir -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -148,7 +138,6 @@
                 android:gravity="center"
                 android:layout_marginTop="32dp">
 
-                <!-- Botão Editar -->
                 <Button
                     android:id="@+id/editButton"
                     android:layout_width="0dp"
@@ -156,9 +145,10 @@
                     android:text="Editar informações"
                     android:backgroundTint="@color/verde_pastel"
                     android:layout_weight="1"
-                    android:layout_marginEnd="8dp" />
+                    android:layout_marginEnd="8dp"
+                    android:visibility="gone"/>
 
-                <!-- Botão Excluir -->
+
                 <Button
                     android:id="@+id/deleteButton"
                     android:layout_width="0dp"
@@ -166,10 +156,15 @@
                     android:text="Excluir informações"
                     android:backgroundTint="@color/verde_pastel"
                     android:layout_weight="1"
-                    android:layout_marginStart="8dp" />
+                    android:layout_marginStart="8dp"
+                    android:visibility="gone"/>
+
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
