--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -74,7 +74,7 @@
         android:layout_marginEnd="32dp" />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/entrarButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
