--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,16 +88,18 @@
 
             <TextView
                 android:id="@+id/txtVer"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="232dp"
+                android:layout_height="33dp"
                 android:layout_marginStart="16dp"
-                android:text="Ver patrocinadores"
+                android:text="Ver beneficios da solução"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/setaVer"
+                app:layout_constraintHorizontal_bias="0.222"
                 app:layout_constraintStart_toEndOf="@id/imgVer"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.518" />
 
             <ImageView
                 android:id="@+id/setaVer"
