--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -56,7 +56,7 @@
         android:id="@+id/mensagemFormularioTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Preencha o formulário abaixo para obtermos mais informações da sua produção agrícola."
+        android:text="Preencha o formulário abaixo para obtermos mais informações sobre sua produção agrícola."
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textAlignment="center"
