--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -16,10 +16,10 @@
 
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/voltarBtn"
         android:layout_width="68dp"
         android:layout_height="65dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:src="@drawable/seta_esquerda"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pageTitle"
+        android:id="@+id/titulo"
         android:layout_width="320dp"
         android:layout_height="37dp"
         android:layout_marginEnd="16dp"
