--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/voltarBtn"
         android:layout_width="68dp"
         android:layout_height="65dp"
         android:layout_marginStart="16dp"
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pageTitle"
+        android:id="@+id/titulo"
         android:layout_width="238dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
@@ -42,7 +42,6 @@
         app:layout_constraintTop_toTopOf="@id/topBar"
         app:layout_constraintVertical_bias="0.516" />
 
-    <!-- Formulário -->
     <EditText
         android:id="@+id/nome"
         android:layout_width="0dp"
@@ -74,7 +73,7 @@
         android:layout_marginEnd="32dp" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/senha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -89,14 +88,14 @@
         android:layout_marginEnd="32dp" />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/registrarBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Registrar"
         android:backgroundTint="@color/verde_pastel"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintTop_toBottomOf="@id/senha"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="32dp"
