--- a/app/src/main/res/layout/activity_editar.xml
+++ b/app/src/main/res/layout/activity_editar.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/voltarBtn"
         android:layout_width="68dp"
         android:layout_height="65dp"
         android:layout_marginStart="16dp"
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pageTitle"
+        android:id="@+id/titulo"
         android:layout_width="292dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
@@ -75,7 +75,7 @@
         android:padding="16dp"/>
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/salvarBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
