--- a/app/src/main/res/layout/activity_ler_sobre.xml
+++ b/app/src/main/res/layout/activity_ler_sobre.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pageTitle"
+        android:id="@+id/titulo"
         android:layout_width="238dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
