--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/voltarBtn"
         android:layout_width="68dp"
         android:layout_height="65dp"
         android:layout_marginStart="16dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/pageTitle"
+        android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -122,7 +122,7 @@
                 android:inputType="number" />
 
             <Button
-                android:id="@+id/salvarButton"
+                android:id="@+id/salvarBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Salvar Informações"
@@ -139,7 +139,7 @@
                 android:layout_marginTop="32dp">
 
                 <Button
-                    android:id="@+id/editButton"
+                    android:id="@+id/editBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Editar informações"
@@ -150,7 +150,7 @@
 
 
                 <Button
-                    android:id="@+id/deleteButton"
+                    android:id="@+id/deletarBtn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Excluir informações"
